# GLProj

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Reserved Shader Identifiers.txt  patch.diff  stbpatch.diff
sqlite/: CMakeLists.txt  sqlite3_all.c
src/: AssetManager.cpp  CMakeLists.txt  Camera.cpp  LocalSharedPtr.cpp  Material.cpp  Mesh.cpp  MeshArrayBuffer.cpp  MeshDataBuffer.cpp  MeshIndexBuffer.cpp  MeshManager.cpp  Model.cpp  OpenGLTypes.cpp  RenderManager.cpp  Sampler.cpp  SceneGraph.cpp  Shader.cpp  ShaderManager.cpp  ShadingProgram.cpp  Texture.cpp  TextureManager.cpp  Transform.cpp  main.cpp
src/data/shaders/: BasicShader.fs  BasicShader.vs
src/include/: AssetManager.hpp  Camera.hpp  LocalSharedPtr.hpp  Material.hpp  Mesh.hpp  MeshArrayBuffer.hpp  MeshDataBuffer.hpp  MeshIndexBuffer.hpp  MeshManager.hpp  Model.hpp  OpenGLTypes.hpp  RenderManager.hpp  Sampler.hpp  SceneGraph.hpp  Shader.hpp  ShaderManager.hpp  ShadingProgram.hpp  Texture.hpp  TextureManager.hpp  Transform.hpp
